tests/snapshots/obligation_ledger_snapshot_golden__ledger_snapshot_abort_to_close.snap
---
source: tests/obligation_ledger_snapshot_golden.rs
expression: snapshot
---
LedgerSnapshot {
    node: NodeId(
        "test-node-1",
    ),
    total: 2,
    pending: 0,
    committed: 0,
    aborted: 2,
    conflicts: 0,
    linearity_violations: 0,
}
