tests/snapshots/obligation_ledger_snapshot_golden__ledger_snapshot_binary_format.snap
---
source: tests/obligation_ledger_snapshot_golden.rs
expression: snapshot
---
LedgerSnapshot {
    node: NodeId(
        "test-node-42",
    ),
    total: 3,
    pending: 1,
    committed: 1,
    aborted: 1,
    conflicts: 0,
    linearity_violations: 0,
}
