tests/snapshots/obligation_ledger_snapshot_golden__ledger_snapshot_commit_to_close.snap
---
source: tests/obligation_ledger_snapshot_golden.rs
expression: snapshot
---
LedgerSnapshot {
    node: NodeId(
        "test-node-1",
    ),
    total: 2,
    pending: 0,
    committed: 2,
    aborted: 0,
    conflicts: 0,
    linearity_violations: 0,
}
