tests/snapshots/obligation_ledger_snapshot_golden__ledger_snapshot_empty.snap
---
source: tests/obligation_ledger_snapshot_golden.rs
expression: snapshot
---
LedgerSnapshot {
    node: NodeId(
        "test-node-1",
    ),
    total: 0,
    pending: 0,
    committed: 0,
    aborted: 0,
    conflicts: 0,
    linearity_violations: 0,
}
