tests/snapshots/obligation_ledger_snapshot_golden__ledger_snapshot_linearity_violations.snap
---
source: tests/obligation_ledger_snapshot_golden.rs
expression: snapshot
---
LedgerSnapshot {
    node: NodeId(
        "test-node-1",
    ),
    total: 1,
    pending: 1,
    committed: 0,
    aborted: 0,
    conflicts: 0,
    linearity_violations: 1,
}
