tests/snapshots/obligation_ledger_snapshot_golden__ledger_snapshot_mixed_states.snap
---
source: tests/obligation_ledger_snapshot_golden.rs
expression: snapshot
---
LedgerSnapshot {
    node: NodeId(
        "test-node-1",
    ),
    total: 10,
    pending: 5,
    committed: 3,
    aborted: 2,
    conflicts: 0,
    linearity_violations: 0,
}
