tests/snapshots/obligation_ledger_snapshot_golden__ledger_snapshot_no_leak_witness.snap
---
source: tests/obligation_ledger_snapshot_golden.rs
expression: snapshot
---
LedgerSnapshot {
    node: NodeId(
        "test-node-1",
    ),
    total: 5,
    pending: 0,
    committed: 3,
    aborted: 2,
    conflicts: 0,
    linearity_violations: 0,
}
