tests/snapshots/obligation_ledger_snapshot_golden__ledger_snapshot_reserve_to_abort.snap
---
source: tests/obligation_ledger_snapshot_golden.rs
expression: snapshot
---
LedgerSnapshot {
    node: NodeId(
        "test-node-1",
    ),
    total: 2,
    pending: 1,
    committed: 0,
    aborted: 1,
    conflicts: 0,
    linearity_violations: 0,
}
