tests/snapshots/obligation_ledger_snapshot_golden__ledger_snapshot_reserve_to_commit.snap
---
source: tests/obligation_ledger_snapshot_golden.rs
expression: snapshot
---
LedgerSnapshot {
    node: NodeId(
        "test-node-1",
    ),
    total: 2,
    pending: 1,
    committed: 1,
    aborted: 0,
    conflicts: 0,
    linearity_violations: 0,
}
